Update activities and add a splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="radiobutton2">RadioButton</string>
     <string name="radiobutton3">RadioButton</string>
     <string name="radiobutton4">RadioButton</string>
+    <string name="passion_super_motiv">Passioné Super Motivé</string>
+    <string name="logo_splash">logo_splash</string>
 </resources>
